<resources>
    <string name="app_name">Smart Attendance</string>
    <string name="smart">SMART</string>
    <string name="attendance">ATTENDANCE</string>
    <string name="system">SYSTEM</string>
    <string name="app_title">SMART ATTENDANCE SYSTEM</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="lecturer_sign_in_here">Lecturer ? Sign in here</string>
    <string name="scan_your_id_card_to_login">Scan your ID Card to login</string>
    <string name="proceed">Proceed</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_password">Enter password</string>
    <string name="email">Email</string>
    <string name="fullname">FullName</string>
    <string name="login">Login</string>
    <string name="your_subjects">Your Subjects</string>
    <string name="scan_your_id">Scan your Id</string>
    <string name="scan">Scan</string>
    <string name="total_sessions">Total Sessions</string>
</resources>